examples/test_package/DoubleDC_Test/steps/benchzebra:precise.pl_run3/#test_analysis_2_result.txt
### **Evaluation Report: Zebra Puzzle in ProbLog**

---

#### **1. Document Title**
**Analysis of Zebra Puzzle Implementation in ProbLog**

---

#### **2. Background and Purpose**
The Zebra Puzzle is a classic logic puzzle where the goal is to determine the correct arrangement of houses based on a set of given constraints. This report evaluates the implementation of the puzzle in ProbLog, focusing on logical correctness, predicate definitions, and error handling.

---

#### **3. Test Results Summary**
The provided code fails during execution with the following error:
```plaintext
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.
```

**Failed Queries:**
- The query `zebra(Houses)` fails because the predicate `member/2` is not defined in the ProbLog context.

---

#### **4. Failure Localization**
- **Failed Predicate:** `member/2`
  - **Location:** Line 4 of the code.
  - **Issue:** The predicate `member/2` is used but not defined in the ProbLog program. The error indicates that ProbLog cannot find any clauses for this predicate.

---

#### **5. Root Cause Analysis**
- **Logical Correctness:**
  - The code attempts to use the `member/2` predicate, which is a standard Prolog predicate for list membership. However, ProbLog does not inherently support this predicate unless explicitly defined.
  - The recursive termination of predicates like `right_of/3` and `next_to/3` is logically correct, but the absence of `member/2` halts execution.

- **Probabilistic Context:**
  - The code does not involve probabilistic facts or DeepProbLog features (e.g., `nn/3`, `tensor/…`). Thus, the analysis focuses on classical Prolog correctness.
  - The error is purely syntactic and does not involve probabilistic rules.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met. The logic for house arrangement is sound, but the missing `member/2` predicate prevents execution.
  - **Probabilistic Reasoning:** Not applicable (no probabilistic facts or rules).
  - **Neural Network Integration:** Not used (DeepProbLog feature not used).

- **Edge Cases:**
  - The code assumes the input is a list of houses, but the `member/2` predicate is undefined, leading to failure.
  - No deep recursion issues are observed in the defined predicates (`right_of/3`, `next_to/3`).

---

#### **7. Error Summary**

| Number | Problem                          | Impact                          | Suggestion                          |
|--------|----------------------------------|--------------------------------|------------------------------------|
| 1      | Undefined `member/2` predicate   | Execution fails                | Define `member/2` or replace with ProbLog-compatible alternatives. |

---

### **Final Remarks**
The Zebra Puzzle implementation is logically sound but fails due to the undefined `member/2` predicate. To resolve this, either define `member/2` in ProbLog or rewrite the constraints using supported predicates. The absence of probabilistic or DeepProbLog features simplifies the analysis, but the core issue must be addressed for successful execution. 

**Word Count:** 450 words.